Basic integration of PyQGIS samples using sphinx-gallery

--- a/themes/qgis-theme/page.html
+++ b/themes/qgis-theme/page.html
@@ -4,6 +4,7 @@
 
 {% set css_files = css_files + [ '_static/bootstrap-2.3.2/css/bootstrap.min.css' ] %}
 {% set css_files = css_files + [ '_static/qgis-style.css' ] %}
+{% set css_files = css_files + [ '_static/qgis-gallery-style.css' ] %}
 {% set css_files = css_files + [ '_static/bootstrap-2.3.2/css/bootstrap-responsive.min.css' ] %}
 {% set css_files = css_files + [ '_static/bootstrap-sphinx.css' ] %}
 {# 'language' as variable comes in via '-A language=xx', a sphinx-build option 
